# mathsoft

./: CMakeLists.txt  README.md  mandelbrot.cpp
doc/: Makefile  report.tex
src/CPU_Version/: CMakeLists.txt  mandelbrot.cpp
src/GPU_Version/: CMakeLists.txt  mandelbrot.cpp
